# tools_study

./: .cursorrules  .envrc  .gitignore  Dockerfile  debug_metaflow_config.py  model.ckpt  pyproject.toml  requirements.txt
data/: prepare_data.py
flows/: train_model_flow.py
models/: lightning_module.py
utils/: metrics.py
